# Ubuntu-Health---DeSci-Builders-Hackathon-Project

./: .gitignore  CLI_DEPLOYMENT_GUIDE.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STRATEGY.md  DEPLOY_TO_TALE_VERSE.md  DESCI_PIVOT_STRATEGY.md  EXECUTIVE_SUMMARY.md  FINAL_QA_TESTING.md  FREE_BACKEND_OPTIONS.md  HACKATHON_DEMO_SIMULATION.md  HACKATHON_PRESENTATION.md  HACKATHON_STRATEGY.md  HACKATHON_SUBMISSION_PACKAGE.md  HEALING_ATLAS_RESTORATION_PLAN.md  IMMEDIATE_ACTION_PLAN.md  LICENSE  NETWORK_STATES_FOUNDATION.md  NETWORK_STATES_STRATEGIC_SUMMARY.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_DEVELOPMENT_PLAN.md  PRODUCTION_TRANSITION_STATUS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_REVIEW_REPORT.md  README.md  SECURITY_AUDIT_ACTION_PLAN.md  SECURITY_AUDIT_PACKAGE.md  VIDEO_PRODUCTION_GUIDE.md  VIDEO_USER_FLOW_SCRIPT.md  apply-biotech-theme.ps1  biotech-theme-demo.html  demo-package.json  demo-script.js  demo-test.js  deploy-to-tale-verse.ps1  deploy-to-tale-verse.sh  deploy.ps1  deploy.sh  desci-demo-terminal.js  (+11 more)
backend/: package.json
backend/src/: server.ts
contracts/: Anchor.toml  package.json
contracts/programs/recovery-logs/: Cargo.toml
contracts/programs/recovery-logs/src/: lib.rs
contracts/programs/treatment-passes/: Cargo.toml
contracts/programs/treatment-passes/src/: lib.rs
deployment/: docker-compose.yml
deployment/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.Dockerfile
deployment/monitoring/: prometheus.yml
deployment/nginx/: nginx.conf
deployment/scripts/: deploy-ubuntu-health.sh
docs/: README.md
docs/branding/: ubuntu-health-guide.md
docs/compliance/: desci-compliance.md
docs/technical/: architecture.md
docs/ubuntu-philosophy/: principles.md
docs/user-guides/: getting-started.md
frontend/: next.config.js  package.json  tsconfig.json
governance/: governance-constitution.md  tokenomics.md  voting-mechanisms.md
governance/dao/: ubuntu-consensus.js
governance/treasury/: treasury-management.md
mobile/: package.json
production-platform/: BACKEND_DEPLOY_GUIDE.md  CHECK_PROJECT_VISIBILITY.md  DEPLOY_TO_PRODUCTION.md  DNS_CONFIGURATION.md  DNS_SETUP_GUIDE.md  DNS_UPDATE_REQUIRED.md  DOMAIN_TRANSFER_PROCESS.md  FIX_BACKEND_API.md  MANUAL_FIX_APPROACH.md  NEXT_STEPS_COMPLETE.md  README.md  REMOVE_PASSWORD_PROTECTION.md  URGENT_PASSWORD_FIX.md  VERCEL_CONVERSION_COMPLETE.md  VERCEL_DOMAIN_FIX.md  build-production.ps1  check-deployment-status.sh  check-dns-config.ps1  check-new-dns.ps1  deploy-backend-railway.ps1  deploy-backend-railway.sh  final-domain-setup.sh  setup-production.ps1  simple-dns-check.ps1  start-dev.ps1
production-platform/backend/: .env.example  Dockerfile  RAILWAY_DEPLOY.md  healthcheck.js  package-lock.json  package-prod.json  package-simple.json  package.json  preview-scripts.json  server.js  tsconfig-simple.json  tsconfig.json
production-platform/frontend/: FINAL-SUCCESS-REPORT.md  README_DEPLOY.md  SUCCESS-API-FIXED.md  cleanup-vercel.ps1  deploy-fresh-clean.ps1  deploy-fresh.ps1  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
production-platform/smart-contracts/: data_contribution_rewards.rs  governance.rs
programs/ubuntu-health-core/: Cargo.toml
programs/ubuntu-health-core/src/: lib.rs  lives_token.rs  milestone_escrow.rs  treatment_pass_nft.rs
smart-contracts/: Cargo.toml  deploy.sh  treatment_sponsorship.rs
src/: App.tsx
src/components/: CommunityImpactDashboard.tsx  FHIRIntegrationManager.tsx  HealingAtlasRecoveryLogger.tsx  HealingAtlasSponsorshipDiscovery.tsx  RecoveryLogger.tsx  (+10 more)
tests/: README.md  cypress.config.js  package-basic.json  package.json  platform-validation.js  test-runner.js
(+73 files in other folders)
