[package]
name = "ubuntu-health-core"
version = "0.1.0"
description = "Ubuntu Health - Healing Atlas Core Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ubuntu_health_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }
