[package]
name = "recovery-logs"
version = "0.1.0"
description = "Ubuntu Health Recovery Logs - Timestamped Healthcare Documentation with Ubuntu Community Verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "recovery_logs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
