[package]
name = "treatment-passes"
version = "0.1.0"
description = "Ubuntu Health Treatment Passes - NFT-based Healthcare Access with Ubuntu Community Sponsorship"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treatment_passes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "1.13.2"
